<resources>
    <string name="app_name">Gochisou</string>
    <string name="login_button">login</string>
    <string name="hint_client_secret">Client Secret</string>
    <string name="button_get_token">Get your token</string>
    <string name="message_invalid_token">ログインできませんでした。\nトークンを再確認してください。</string>
    <string name="button_next">Next</string>
    <string name="text_team_url">Team URL</string>
    <string name="hint_your_team">your-team</string>
    <string name="esa_io">.esa.io</string>
    <string name="text_input_your_team_url">ログインしたい esa のチームを入力してください</string>
    <string name="label_login">Login</string>
    <string name="button_login">login</string>
    <string name="menu_edit_navigation_identifier">タブを編集する</string>
    <string name="label_edit_navigation_identifier">タブを編集する</string>
    <string name="menu_add_team">別のチームにログインする</string>
    <string name="label_post_list">投稿一覧</string>
    <string name="label_member_list">メンバー一覧</string>
    <string name="hint_client_id">Client ID</string>
    <string name="hint_redirect_url">Redirect URL</string>
</resources>
