<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"
        style="?attr/colorButtonNormal"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_team_url"
            android:textColor="?android:attr/textColorPrimary"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edit_team_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/hint_your_team"
                android:lines="1"
                android:maxLines="1"
                android:inputType="text"
                android:textColorHint="?android:attr/textColorPrimaryInverse"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/esa_io"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center_vertical"
                android:textColor="?android:attr/textColorPrimary"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_input_your_team_url"
            android:textColor="?android:attr/textColorPrimary"
            />
    </LinearLayout>
</RelativeLayout>