<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/content_padding"
    >
    <EditText
        android:id="@+id/token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/hint_client_secret"
        />
    <Button
        android:id="@+id/get_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_get_token"
        android:layout_above="@id/token"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:textAppearance="?android:textAppearanceLarge"
        />
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/token"
        android:layout_marginTop="16dp"
        android:text="@string/login_button"
        />
</RelativeLayout>